--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!-- spring版本号 -->
         <spring.version>4.2.5.RELEASE</spring.version>
+        <!--<spring.version>3.2.4.RELEASE</spring.version>-->
 
         <!-- mybatis版本号 -->
         <mybatis.version>3.2.8</mybatis.version>
@@ -259,11 +260,6 @@
             <artifactId>zkclient</artifactId>
             <version>0.10</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-pool2</artifactId>
-            <version>${commons.version}</version>
-        </dependency>
 
         <!-- spring-data-redis redis -->
         <dependency>
@@ -286,12 +282,32 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-all</artifactId>
-            <version>5.8.0</version>
+            <version>5.11.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-pool</artifactId>
-            <version>5.8.0</version>
+            <version>5.11.1</version>
+        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.apache.commons</groupId>-->
+            <!--<artifactId>commons-pool2</artifactId>-->
+            <!--<version>${commons.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!-- https://mvnrepository.com/artifact/commons-pool/commons-pool -->
+        <dependency>
+            <groupId>commons-pool</groupId>
+            <artifactId>commons-pool</artifactId>
+            <version>1.6</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
         </dependency>
 
     </dependencies>
